--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,500;1,700&display=swap"
+          rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <title>React App</title>
   </head>
   <body>
